frontend work --> one consultation page, one therapist profile, all therapists page.

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -11,6 +11,7 @@
     <a href="/">Home</a>
     <a href="/myProfile">Profile</a>
     <a href="/allTherapists">Therapists</a>
+    <a href="/chat">Chat</a>
 </header>
 
 
