--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,37 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<header th:replace="fragment :: header"></header>
-<h1> Mental-HealthCare</h1>
 
-<p> Home Page</p>
-<form action="/kkkk" method="get">
-    <button type="submit"> submit</button>
-</form>
 
-<div th:each="oneRes: ${response}">
-    <div>
-        <div th:if="${oneRes.isTherapists()}">
-            <h2 th:text="${therapistsName}"></h2>
-            <h2 th:text="${oneRes.getBody()}"></h2>
-        </div>
-        <div th:unless="${oneRes.isTherapists()}">
-            <h2 th:text="${usersName}"></h2>
-            <h2 th:text="${oneRes.getBody()}"></h2>
-        </div>
-    </div>
-</div>
 
-<div th:each="oneMessage: ${chat}">
-    <div>
-        <h2 th:text="${oneMessage.getBody()}"></h2>
-        <h2 th:text="${oneMessage.getSender().getUsername()}"></h2>
-    </div>
-</div>
 
-</body>
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<header th:replace="fragment :: header"></header>-->
+<!--<h1> Mental-HealthCare</h1>-->
+
+<!--<p> Home Page</p>-->
+<!--<form action="/kkkk" method="get">-->
+<!--    <button type="submit"> submit</button>-->
+<!--</form>-->
+
+<!--<div th:each="oneRes: ${response}">-->
+<!--    <div>-->
+<!--        <div th:if="${oneRes.isTherapists()}">-->
+<!--            <h2 th:text="${therapistsName}"></h2>-->
+<!--            <h2 th:text="${oneRes.getBody()}"></h2>-->
+<!--        </div>-->
+<!--        <div th:unless="${oneRes.isTherapists()}">-->
+<!--            <h2 th:text="${usersName}"></h2>-->
+<!--            <h2 th:text="${oneRes.getBody()}"></h2>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!--<div th:each="oneMessage: ${chat}">-->
+<!--    <div>-->
+<!--        <h2 th:text="${oneMessage.getBody()}"></h2>-->
+<!--        <h2 th:text="${oneMessage.getSender().getUsername()}"></h2>-->
+<!--    </div>-->
+<!--</div>-->
+
+
+
