--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -117,13 +117,13 @@
                         <a class="nav-link" th:href="@{/aware}">Awareness</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="service.html">Therapists</a>
+                        <a class="nav-link" th:href="@{/allTherapists}">Therapists</a>
                     </li>
                     <li sec:authorize="isAuthenticated()" class="nav-item">
                         <a class="nav-link" th:href="@{/chat}">Chat</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Us</a>
+                        <a class="nav-link" th:href="@{/about}">About Us</a>
                     </li>
                     <li sec:authorize="isAuthenticated()" class="nav-item">
                         <a class="nav-link" th:href="@{/myProfile}">Profile</a>
@@ -315,11 +315,11 @@
                                     <i class="fa fa-angle-right" aria-hidden="true"></i>Awareness</a>
                             </li>
                             <li>
-                                <a href="service.html">
+                                <a th:href="@{/allTherapists}">
                                     <i class="fa fa-angle-right" aria-hidden="true"></i>Therapists</a>
                             </li>
                             <li>
-                                <a href="about.html">
+                                <a th:href="@{/about}">
                                     <i class="fa fa-angle-right" aria-hidden="true"></i>About Us</a>
                             </li>
 
@@ -383,7 +383,6 @@
             </div>
         </div>
     </footer>
-
 
     <!-- scroll-to-top -->
     <div id="back-to-top" class="back-to-top">
