--- a/src/main/resources/templates/oneConsultation.html
+++ b/src/main/resources/templates/oneConsultation.html
@@ -39,8 +39,86 @@
 </head>
 
 <body>
-<header th:replace="fragment :: header"></header>
+<!--Header Upper-->
+<section class="header-uper">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-xl-4 col-lg-3">
+                <div class="logo">
+                    <a href="index.html">
+                        <img loading="lazy" id="main-logo" class="img-fluid" src="/images/eee.png" alt="logo">
+                    </a>
+                </div>
+            </div>
+            <div class="col-xl-8 col-lg-9">
+                <div class="right-side">
+                    <ul class="contact-info pl-0 mb-4 mb-md-0">
+                        <li class="item text-left">
+                            <div class="icon-box">
+                                <i class="far fa-envelope"></i>
+                            </div>
+                            <strong>Email</strong>
+                            <br>
+                            <a href="mailto:info@medic.com">
+                                <span>info@lighthouse.com</span>
+                            </a>
+                        </li>
+                        <li class="item text-left">
+                            <div class="icon-box">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                            <strong>Call Now</strong>
+                            <br>
+                            <span>+ (962) - 123 - 4567</span>
+                        </li>
+                    </ul>
+                    <div sec:authorize="!isAuthenticated()" class="link-btn text-center text-lg-right">
+                        <a th:href="@{/login}" class="btn-style-one">Log In</a>
+                        <a th:href="@{/signup}" class="btn-style-one">Sign up</a>
+                    </div>
+                    <div sec:authorize="isAuthenticated()" class="link-btn text-center text-lg-right">
+                        <a th:href="@{/perform_logout}" class="btn-style-one">Log Out</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+<!--Header Upper-->
 
+
+<!--Main Header-->
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarLinks"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarLinks">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/aware}">Awareness</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/allTherapists}">Therapists</a>
+                </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <a class="nav-link" th:href="@{/chat}">Chat</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/about}">About Us</a>
+                </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <a class="nav-link" th:href="@{/myProfile}">Profile</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!--End Main Header -->
 
 <section class="section style-three pb-0" style="margin-bottom: 5rem;">
     <div class="container">
@@ -238,7 +316,7 @@
     </div>
 </section>
 
-<!-- footer-main -->
+<!--footer-main-->
 <footer class="footer-main">
     <div class="footer-top">
         <div class="container">
@@ -246,76 +324,64 @@
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <div class="about-widget">
                         <div class="footer-logo">
-                            <figure>
-                                <a href="index.html">
-                                    <img loading="lazy" class="img-fluid" src="/images/logo-2.png" alt="medic"/>
-                                </a>
-                            </figure>
+                            <h2>Lighthouse E-Clinic</h2>
+                            <!-- <figure>
+                              <a href="index.html">
+                                <img loading="lazy" class="img-fluid" src="/images/eee.png" alt="medic" >
+                              </a>
+                            </figure> -->
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, temporibus?</p>
+                        <p>Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
                         <ul class="location-link">
-                            <li class="item">
-                                <i class="fas fa-map-marker-alt"></i>
-                                <p>Modamba, NY 80021, United States</p>
-                            </li>
+
                             <li class="item">
                                 <i class="far fa-envelope" aria-hidden="true"></i>
                                 <a href="mailto:support@medic.com">
-                                    <p>support@medic.com</p>
+                                    <p>support@lighthouse.com</p>
                                 </a>
                             </li>
                             <li class="item">
                                 <i class="fas fa-phone" aria-hidden="true"></i>
-                                <p>(88017) +123 4567</p>
+                                <p>(+962) 123 4567</p>
                             </li>
                         </ul>
                         <ul class="list-inline social-icons">
-                            <li class="list-inline-item">
-                                <a href="https://facebook.com/themefisher" aria-label="facebook"
-                                ><i class="fab fa-facebook-f"></i
-                                ></a>
+                            <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                            aria-label="facebook"><i class="fab fa-facebook-f"></i></a>
                             </li>
-                            <li class="list-inline-item">
-                                <a href="https://twitter.com/themefisher" aria-label="twitter"><i
-                                        class="fab fa-twitter"></i></a>
+                            <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                            aria-label="twitter"><i class="fab fa-twitter"></i></a>
                             </li>
-                            <li class="list-inline-item">
-                                <a href="https://instagram.com/themefisher" aria-label="instagram"
-                                ><i class="fab fa-instagram"></i
-                                ></a>
+                            <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                            aria-label="instagram"><i class="fab fa-instagram"></i></a>
                             </li>
-                            <li class="list-inline-item">
-                                <a href="https://github.com/themefisher" aria-label="github"><i
-                                        class="fab fa-github"></i></a>
+                            <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                                            aria-label="github"><i class="fab fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
                 </div>
+                <!--                    ToDo: Edit links-->
                 <div class="col-lg-3 col-md-5 mb-3 mb-md-0">
-                    <h2>Services</h2>
+                    <h2>QUICK LINKS</h2>
                     <ul class="menu-link">
                         <li>
-                            <a href="service.html">
-                                <i class="fa fa-angle-right" aria-hidden="true"></i>Orthopadic Liabilities</a
-                            >
+                            <a th:href="@{/}">
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>Home</a>
                         </li>
                         <li>
-                            <a href="service.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Dental
-                                Clinic</a>
+                            <a th:href="@{/aware}">
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>Awareness</a>
                         </li>
                         <li>
-                            <a href="service.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Dormamu
-                                Clinic</a>
+                            <a th:href="@{/allTherapists}">
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>Therapists</a>
                         </li>
                         <li>
-                            <a href="service.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Psycological
-                                Clinic</a>
+                            <a th:href="@{/about}">
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>About Us</a>
                         </li>
-                        <li>
-                            <a href="service.html">
-                                <i class="fa fa-angle-right" aria-hidden="true"></i>Gynaecological Clinic</a
-                            >
-                        </li>
+
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-7">
@@ -325,30 +391,28 @@
                             <li class="item">
                                 <div class="media">
                                     <div class="media-left mr-3">
-                                        <a href="blog-details.html">
-                                            <img loading="lazy" src="/images/blog/post-thumb-small.jpg"
-                                                 alt="post-thumb"/>
+                                        <a th:href="@{/aware2}">
+                                            <img loading="lazy" src="/images/blog/15.jpg"
+                                                 alt="post-thumb">
                                         </a>
                                     </div>
                                     <div class="media-body">
-                                        <h5><a href="blog-details.html">A lesson adip isicing</a></h5>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
-                                            dolorem.</p>
+                                        <h5><a th:href="@{/aware2}">Personality disorders</a></h5>
+                                        <p>Our personality is the collection of thoughts, feelings and behaviours that makes each of us the individuals we are.</p>
                                     </div>
                                 </div>
                             </li>
                             <li class="item">
                                 <div class="media">
                                     <div class="media-left mr-3">
-                                        <a href="blog-details.html">
-                                            <img loading="lazy" src="/images/blog/post-thumb-small.jpg"
-                                                 alt="post-thumb"/>
+                                        <a th:href="@{/aware1}">
+                                            <img loading="lazy" src="/images/blog/19.jpg"
+                                                 alt="post-thumb">
                                         </a>
                                     </div>
                                     <div class="media-body">
-                                        <h5><a href="blog-details.html">How to make an event</a></h5>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
-                                            dolorem.</p>
+                                        <h5><a th:href="@{/aware1}">Obsessive-compulsive disorder (OCD)</a></h5>
+                                        <p>Obsessions are unwelcome thoughts, images, urges, worries or doubts that repeatedly appear in your mind.</p>
                                     </div>
                                 </div>
                             </li>
@@ -361,10 +425,8 @@
     <div class="footer-bottom">
         <div class="container clearfix">
             <div class="copyright-text">
-                <p>
-                    &copy; Copyright 2021. Designed &amp; Developed by <a
-                        href="https://themefisher.com/">Themefisher</a>
-                </p>
+                <p>&copy; Copyright 2021. by <a
+                        href="https://github.com/Mental-HealthCare/Mental-HealthCare">Mental Health Clinic Team</a></p>
             </div>
             <ul class="footer-bottom-link">
                 <li>
@@ -374,14 +436,12 @@
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
+                    <a href="https://github.com/Mental-HealthCare/Mental-HealthCare">Contact</a>
                 </li>
             </ul>
         </div>
     </div>
 </footer>
-<!-- End footer-main -->
-
 <!-- scroll-to-top -->
 <div id="back-to-top" class="back-to-top">
     <i class="fa fa-angle-up"></i>
