--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -141,7 +141,7 @@ WEBSITE: https://themefisher.com
           <div class="content style text-center">
             <h2 class="text-white text-bold mb-2" data-animation-in="slideInLeft">Our Best Therapists</h2>
             <p class="tag-text mb-4" data-animation-in="slideInRight">TALK TO YOUR THERAPIST ONLINE PRIVATELY ANYTIME ANYWHERE !            </p>
-            <a href="about.html" class="btn btn-main btn-white" data-animation-in="slideInLeft" data-duration-in="1.2">Get Help</a>
+            <a th:href="@{/aware}" class="btn btn-main btn-white" data-animation-in="slideInLeft" data-duration-in="1.2">Get Help</a>
           </div>
           <!-- Slide Content End -->
         </div>
@@ -158,7 +158,7 @@ WEBSITE: https://themefisher.com
             <h2 class="text-white" data-animation-in="slideInRight">We Care About Your Mental Health</h2>
             <p class="tag-text mb-4" data-animation-in="slideInRight" data-duration-in="0.6"> providing dynamic, client-driven care based on the principles 
             </p>
-            <a href="about.html" class="btn btn-main btn-white" data-animation-in="slideInRight" data-duration-in="1.2">about us</a>
+            <a th:href="@{/about}" class="btn btn-main btn-white" data-animation-in="slideInRight" data-duration-in="1.2">about us</a>
           </div>
           <!-- Slide Content End-->
         </div>
@@ -174,7 +174,7 @@ WEBSITE: https://themefisher.com
           <div class="content text-center style">
             <h2 class="text-white text-bold mb-2" data-animation-in="slideInRight">Best Medical Services</h2>
             <p class="tag-text mb-4" data-animation-in="slideInLeft">Community-Centric services that promote optimal quality of life .</p>
-            <a href="about.html" class="btn btn-main btn-white" data-animation-in="slideInRight"  data-duration-in="1.2"> More</a>
+            <a th:href="@{/aware}" class="btn btn-main btn-white" data-animation-in="slideInRight"  data-duration-in="1.2"> More</a>
           </div>
           <!-- Slide Content End -->
         </div>
@@ -201,7 +201,7 @@ WEBSITE: https://themefisher.com
 							<div class="item">
 								<div class="icon-box">
 									<figure>
-										<a href="services.html"><img loading="lazy" src="images/resource/4.png" alt="features image"></a>
+										<a th:href="@{/aware}"><img loading="lazy" src="images/resource/4.png" alt="features image"></a>
 									</figure>
 								</div>
 								<h3 class="mb-2">healthy minds free of anxiety
@@ -213,7 +213,7 @@ WEBSITE: https://themefisher.com
 							<div class="item">
 								<div class="icon-box">
 									<figure>
-										<a href="services.html">
+										<a th:href="@{/aware}">
 											<img loading="lazy" src="images/resource/4.png" alt="features image">
 										</a>
 									</figure>
@@ -227,7 +227,7 @@ WEBSITE: https://themefisher.com
 							<div class="item">
 								<div class="icon-box">
 									<figure>
-										<a href="services.html">
+										<a th:href="@{/aware}">
 											<img loading="lazy" src="images/resource/4.png" alt="features image">
 										</a>
 									</figure>
@@ -241,7 +241,7 @@ WEBSITE: https://themefisher.com
 							<div class="item">
 								<div class="icon-box">
 									<figure>
-										<a href="services.html">
+										<a th:href="@{/aware}">
 											<img loading="lazy" src="images/resource/4.png" alt="features image">
 										</a>
 									</figure>
@@ -317,7 +317,7 @@ WEBSITE: https://themefisher.com
                         <i class="far fa-dot-circle"></i>anger becomes your go-to emotion, blocking out your ability to feel other emotions
                        </li>
                     </ul>
-                    <a href="services.html" class="btn btn-style-one">Read more</a>
+                    <a th:href="@{/aware}" class="btn btn-style-one">Read more</a>
                   </div>
                 </div>
               </div>
@@ -349,7 +349,7 @@ WEBSITE: https://themefisher.com
                         <i class="far fa-dot-circle"></i>Prenatal depression: depression that occurs during pregnancy. This is sometimes also called antenatal depression.
                         </li>
                     </ul>
-                    <a href="services.html" class="btn btn-style-one">Read more</a>
+                    <a th:href="@{/aware}" class="btn btn-style-one">Read more</a>
                   </div>
                 </div>
               </div>
@@ -380,7 +380,7 @@ WEBSITE: https://themefisher.com
                         <i class="far fa-dot-circle"></i>Mental health problems can cause stress: You might find coping with the day-to-day symptoms of your mental health problem, as well as potentially needing to manage medication, heath care appointments or treatments, can become extra sources of stress.
                         </li>
                     </ul>
-                    <a href="services.html" class="btn btn-style-one">Read more</a>
+                    <a th:href="@{/aware}" class="btn btn-style-one">Read more</a>
                   </div>
                 </div>
               </div>
@@ -413,7 +413,7 @@ WEBSITE: https://themefisher.com
 
                         </li>
                     </ul>
-                    <a href="services.html" class="btn btn-style-one">Read more</a>
+                    <a th:href="@{/aware}" class="btn btn-style-one">Read more</a>
                   </div>
                 </div>
               </div>
@@ -443,7 +443,7 @@ WEBSITE: https://themefisher.com
                       </li>
                      
                     </ul>
-                    <a href="services.html" class="btn btn-style-one">Read more</a>
+                    <a th:href="@{/aware}" class="btn btn-style-one">Read more</a>
                   </div>
                 </div>
               </div>
