--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,23 +1,334 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <!-- ** Basic Page Needs ** -->
+  <meta charset="UTF-8">
+  <title>Chat</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/chat.css}">
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.js"></script>
+
+  <!-- ** Mobile Specific Metas ** -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Medical HTML Template">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+  <meta name="author" content="Themefisher">
+  <meta name="generator" content="Themefisher Medical HTML Template v1.0">
+
+  <!-- ** Plugins Needed for the Project ** -->
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+  <!-- Slick Carousel -->
+  <link rel="stylesheet" href="plugins/slick/slick.css">
+  <link rel="stylesheet" href="plugins/slick/slick-theme.css">
+  <!-- FancyBox -->
+  <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css">
+  <!-- fontawesome -->
+  <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css">
+  <!-- animate.css -->
+  <link rel="stylesheet" href="plugins/animation/animate.min.css">
+  <!-- jquery-ui -->
+  <link rel="stylesheet" href="plugins/jquery-ui/jquery-ui.css">
+  <!-- timePicker -->
+  <link rel="stylesheet" href="plugins/timePicker/timePicker.css">
+
+  <!-- Stylesheets -->
+  <link href="/css/style.css" rel="stylesheet">
+  <link href="/css/login.css" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+  <!--Favicon-->
+  <link rel="icon" href="images/eee.png" type="image/x-icon">
+
+
 </head>
+
 <body>
-<header th:replace="fragment :: header"></header>
-<h1>Log In Form</h1>
-<div>
-  <form action="/perform_login" method="post" >
-    <label for="username">User Name</label>
-    <input id="username" name="username" type="text"/>
-    <br/>
-    <label for="password">Password</label>
-    <input id="password" name="password" type="password"/>
-    <br/>
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
+
+<div class="page-wrapper">
+  <!--Header Upper-->
+  <section class="header-uper">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-xl-4 col-lg-3">
+          <div class="logo">
+            <a href="index.html">
+              <img loading="lazy" id="main-logo" class="img-fluid" src="images/eee.png" alt="logo">
+            </a>
+          </div>
+        </div>
+        <div class="col-xl-8 col-lg-9">
+          <div class="right-side">
+            <ul class="contact-info pl-0 mb-4 mb-md-0">
+              <li class="item text-left">
+                <div class="icon-box">
+                  <i class="far fa-envelope"></i>
+                </div>
+                <strong>Email</strong>
+                <br>
+                <a href="mailto:info@medic.com">
+                  <span>info@lighthouse.com</span>
+                </a>
+              </li>
+              <li class="item text-left">
+                <div class="icon-box">
+                  <i class="fas fa-phone"></i>
+                </div>
+                <strong>Call Now</strong>
+                <br>
+                <span>+ (962) - 123 - 4567</span>
+              </li>
+            </ul>
+            <div sec:authorize="!isAuthenticated()" class="link-btn text-center text-lg-right">
+              <a th:href="@{/login}" class="btn-style-one">Log In</a>
+              <a th:href="@{/signup}" class="btn-style-one">Sign up</a>
+            </div>
+            <div sec:authorize="isAuthenticated()" class="link-btn text-center text-lg-right">
+              <a th:href="@{/perform_logout}" class="btn-style-one">Log Out</a>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
+  <!--Header Upper-->
+
+
+  <!--Main Header-->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarLinks"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarLinks">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/aware}">Awareness</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/allTherapists}">Therapists</a>
+          </li>
+          <li sec:authorize="isAuthenticated()" class="nav-item">
+            <a class="nav-link" th:href="@{/chat}">Chat</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/about}">About Us</a>
+          </li>
+          <li sec:authorize="isAuthenticated()" class="nav-item">
+            <a class="nav-link" th:href="@{/myProfile}">Profile</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--End Main Header -->
+
+<div class="container">
+  <div class="card card-container">
+    <img id="profile-img" class="profile-img-card" loading="lazy" src="/images/eee.png" alt="logo" />
+    <p id="profile-name" class="profile-name-card"></p>
+    <form class="form-signin" action="/perform_login" method="post">
+      <span id="reauth-email" class="reauth-email"></span>
+      <input type="text" id="inputEmail" class="form-control" name="username" required autofocus>
+      <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+      <div id="remember" class="checkbox">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
+    </form><!-- /form -->
+    <a th:href="@{/signup}" class="forgot-password">
+      New here? Sign-up
+    </a>
+<!--    <div>-->
+<!--      <form action="/perform_login" method="post" >-->
+<!--        <label for="username">User Name</label>-->
+<!--        <input id="username" name="username" type="text"/>-->
+<!--        <br/>-->
+<!--        <label for="password">Password</label>-->
+<!--        <input id="password" name="password" type="password"/>-->
+<!--        <br/>-->
+<!--        <button type="submit" class="btn btn-primary">Login</button>-->
+<!--      </form>-->
+<!--    </div>-->
+  </div><!-- /card-container -->
+</div><!-- /container -->
+
+
+
+<!--footer-main-->
+<footer class="footer-main">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row justify-content-between">
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <div class="about-widget">
+            <div class="footer-logo">
+              <h2>Lighthouse E-Clinic</h2>
+              <!-- <figure>
+                <a href="index.html">
+                  <img loading="lazy" class="img-fluid" src="images/eee.png" alt="medic" >
+                </a>
+              </figure> -->
+            </div>
+            <p>Lighthouse E-Clinic is a new and innovative online system that delivers clinical services to people experiencing mental health problems. The makes clinical care free and accessible to people wherever and whenever they need it.</p>
+            <ul class="location-link">
+
+              <li class="item">
+                <i class="far fa-envelope" aria-hidden="true"></i>
+                <a href="mailto:support@medic.com">
+                  <p>support@lighthouse.com</p>
+                </a>
+              </li>
+              <li class="item">
+                <i class="fas fa-phone" aria-hidden="true"></i>
+                <p>(+962) 123 4567</p>
+              </li>
+            </ul>
+            <ul class="list-inline social-icons">
+              <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                              aria-label="facebook"><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                              aria-label="twitter"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                              aria-label="instagram"><i class="fab fa-instagram"></i></a>
+              </li>
+              <li class="list-inline-item"><a href="https://github.com/Mental-HealthCare/Mental-HealthCare"
+                                              aria-label="github"><i class="fab fa-github"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!--                    ToDo: Edit links-->
+        <div class="col-lg-3 col-md-5 mb-3 mb-md-0">
+          <h2>QUICK LINKS</h2>
+          <ul class="menu-link">
+            <li>
+              <a th:href="@{/}">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Home</a>
+            </li>
+            <li>
+              <a th:href="@{/aware}">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Awareness</a>
+            </li>
+            <li>
+              <a th:href="@{/allTherapists}">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Therapists</a>
+            </li>
+            <li>
+              <a th:href="@{/about}">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>About Us</a>
+            </li>
+
+          </ul>
+        </div>
+        <div class="col-lg-4 col-md-7">
+          <div class="social-links">
+            <h2>Recent Posts</h2>
+            <ul>
+              <li class="item">
+                <div class="media">
+                  <div class="media-left mr-3">
+                    <a th:href="@{/aware2}">
+                      <img loading="lazy" src="images/blog/15.jpg"
+                           alt="post-thumb">
+                    </a>
+                  </div>
+                  <div class="media-body">
+                    <h5><a th:href="@{/aware2}">Personality disorders</a></h5>
+                    <p>Our personality is the collection of thoughts, feelings and behaviours that makes each of us the individuals we are.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="item">
+                <div class="media">
+                  <div class="media-left mr-3">
+                    <a th:href="@{/aware1}">
+                      <img loading="lazy" src="images/blog/19.jpg"
+                           alt="post-thumb">
+                    </a>
+                  </div>
+                  <div class="media-body">
+                    <h5><a th:href="@{/aware1}">Obsessive-compulsive disorder (OCD)</a></h5>
+                    <p>Obsessions are unwelcome thoughts, images, urges, worries or doubts that repeatedly appear in your mind.</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <div class="container clearfix">
+      <div class="copyright-text">
+        <p>&copy; Copyright 2021. by <a
+                href="https://github.com/Mental-HealthCare/Mental-HealthCare">Mental Health Clinic Team</a></p>
+      </div>
+      <ul class="footer-bottom-link">
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+        <li>
+          <a href="https://github.com/Mental-HealthCare/Mental-HealthCare">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
+<!-- scroll-to-top -->
+<div id="back-to-top" class="back-to-top">
+  <i class="fa fa-angle-up"></i>
 </div>
 
+</div>
+<!--End pagewrapper-->
+
+
+<!--Scroll to top-->
+<div class="scroll-to-top scroll-to-target" data-target=".header-top">
+  <span class="icon fa fa-angle-up"></span>
+</div>
+
+
+<!-- jquery -->
+<script src="plugins/jquery.min.js"></script>
+<!-- bootstrap -->
+<script src="plugins/bootstrap/bootstrap.min.js"></script>
+<!-- Slick Slider -->
+<script src="plugins/slick/slick.min.js"></script>
+<script src="plugins/slick/slick-animation.min.js"></script>
+<!-- FancyBox -->
+<script src="plugins/fancybox/jquery.fancybox.min.js" defer></script>
+<!-- Google Map -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU" defer></script>
+<script src="plugins/google-map/gmap.js" defer></script>
+
+<!-- jquery-ui -->
+<script src="plugins/jquery-ui/jquery-ui.js" defer></script>
+<!-- timePicker -->
+<script src="plugins/timePicker/timePicker.js" defer></script>
+
+<!-- script js -->
+<script src="js/script.js"></script>
 </body>
 </html>
