make some changes to about us page and adding icons to our accounts.

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -162,7 +162,15 @@ WEBSITE: https://themefisher.com
                         <div class="contents text-center">
                             <h4>Maram <br> mustafa</h4>
                             <p class="paragraphTeam">maram mustafa - fresh graduate from the University of Jordan from IT College with a major in Business Information Technology.</p>
-                            <a href="https://github.com/maram-mustafa" target="_blank" class="btn btn-main">GitHub Account</a>                  </div>
+                            <a href="https://github.com/maram-mustafa" target="_blank" style="color: #424345">
+                                <i class="fab fa-github" style='font-size:40px; margin-right:10%'></i>
+                            </a>
+                            <a href="https://jo.linkedin.com/?trk=guest_homepage-basic_nav-header-logo" target="_blank" style="color: #424345">
+                                <i class="fab fa-linkedin" style='font-size:40px; margin-right:5%'></i>
+                            </a>
+
+<!--                            <i class="fab fa-facebook" style='font-size:40px; margin-right:5%'></i>-->
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -170,17 +178,33 @@ WEBSITE: https://themefisher.com
                         <img loading="lazy" src="https://ca.slack-edge.com/TNGRRLUMA-U01SV43UYRX-fb97fd05e00c-512" alt="doctor" class="img-fluid">
                         <div class="contents text-center">
                             <h4>Aseel<br> Dweedar</h4>
-                            <p class="paragraphTeam">She is software developer, looking for the best, learning, research, and self-development.</p>
-                            <a href="https://github.com/Aseel-Dweedar" target="_blank" class="btn btn-main">GitHub Account</a>                  </div>
+                            <p class="paragraphTeam">She is software developer, looking for the best, learning, love reading, researching, and self-development.</p>
+                            <a href="https://github.com/Aseel-Dweedar" target="_blank" style="color: #424345">
+                                <i class="fab fa-github" style='font-size:40px; margin-right:10%'></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/aseel-dweedar/" target="_blank" style="color: #424345">
+                                <i class="fab fa-linkedin" style='font-size:40px; margin-right:5%'></i>
+                            </a>
+
+<!--                            <i class="fab fa-facebook" style='font-size:40px; margin-right:5%'></i>-->
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team-member">
-                        <img loading="lazy" src="https://ca.slack-edge.com/TNGRRLUMA-U01SAFN6USD-4f534a209778-512" alt="doctor" class="img-fluid">
+                        <img loading="lazy" src="/images/Ayyoub.jpg" alt="doctor" class="img-fluid">
                         <div class="contents text-center">
                             <h4>Ayyoub<br> AlKeyyam</h4>
                             <p class="paragraphTeam">Hard-working and ambitious full-stack developer with a great passion about the software industry.</p>
-                            <a href="https://github.com/ayyoubk" target="_blank" class="btn btn-main">GitHub Account</a>                  </div>
+                            <a href="https://github.com/ayyoubk" target="_blank" style="color: #424345">
+                                <i class="fab fa-github" style='font-size:40px; margin-right:10%'></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/ayyoubk/" target="_blank" style="color: #424345">
+                                <i class="fab fa-linkedin" style='font-size:40px; margin-right:5%'></i>
+                            </a>
+
+<!--                            <i class="fab fa-facebook" style='font-size:40px; margin-right:5%'></i>-->
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -189,7 +213,14 @@ WEBSITE: https://themefisher.com
                         <div class="contents text-center">
                             <h4>Ibrahim<br> Alhamshari</h4>
                             <p class="paragraphTeam">He is a software developer likes reading books, and he is also interested in software development.</p>
-                            <a href="https://github.com/ibrahim-alhamshari" target="_blank" class="btn btn-main">GitHub Account</a>
+                            <a href="https://github.com/ibrahim-alhamshari" target="_blank" style="color: #424345">
+                            <i class="fab fa-github" style='font-size:40px; margin-right:10%'></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/ibrahim-alhamshari" target="_blank" style="color: #424345">
+                                <i class="fab fa-linkedin" style='font-size:40px; margin-right:5%'></i>
+                            </a>
+
+<!--                            <i class="fab fa-facebook" style='font-size:40px; margin-right:5%'></i>-->
                         </div>
                     </div>
                 </div>
